add sound & basic player2 ai

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <i id="volume-button" class="bi bi-volume-up" style="font-size: 4rem; color: white;"></i>
     <canvas id="game-canvas" class="game-canvas"></canvas>
   </body>
 </html>
