--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <i id="volume-button" class="bi bi-volume-up" style="font-size: 4rem; color: white;"></i>
-    <canvas id="game-canvas" class="game-canvas"></canvas>
+    <div id="game-container">
+      <i id="volume-button" class="bi bi-volume-mute"></i>
+      <canvas id="game-canvas" class="game-canvas"></canvas>
+    </div>
   </body>
 </html>
