--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       name="msapplication-TileImage"
       content="/images/ms-icon-144x144.png"
     />
-    <title>Document</title>
+    <title>Pong.js</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="./js/main.js" defer></script>
   </head>
