add game start screen

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <div id="game-start-container" class="game-start-element">
+      <h1 id="game-title" class="game-start-element">JavaScript Pong</h1>
+      <p id="start-text" class="game-start-element">Press Space to start</p>
+    </div>
     <div id="game-container">
       <i id="volume-button" class="bi bi-volume-mute"></i>
       <canvas id="game-canvas" class="game-canvas"></canvas>
